--- a/thongtinkhachang.html
+++ b/thongtinkhachang.html
@@ -121,7 +121,7 @@
                         <div class="my-group pb-3">
                             <div class="col-lg-3"></div>
                             <div class="col-lg-9">
-                                <button class="btn btn-primary px-3 mt-3" style="font-size: 16px;">CẬP NHẬT</button>
+                                <button class="btn btn-primary px-3 mt-3" style="font-size: 16px;" id="btn-update-info">CẬP NHẬT</button>
                             </div>
                         </div>
 
@@ -564,7 +564,7 @@
                     </div>
                 </div>
                 <div id="s5" class="p-5">
-                    <h1 class="title">Sản phẩm đã xem <span class="my-so-luong">(79)</span></h1>
+                    <h1 class="title">Sản phẩm đã xem <span class="my-so-luong"></span></h1>
                     <div class="row">
                         <!-- Danh sách các sản phẩm -->
                         <div>
