--- a/chitietsanpham.html
+++ b/chitietsanpham.html
@@ -35,8 +35,8 @@
 			<!-- Địa chỉ trang -->
 			<ol class="dia-chi" style="background-color: white; font-size: 20px;">
 				<li><a href="index.html">Trang chủ</a></li>
-				<li><a href="sanpham.html" id="address-category">Điện thoại</a></li>
-				<li class="active" id="address-name">iPhone 11 Pro Max</li>
+				<li><a href="sanpham.html" id="address-category">Phân loại</a></li>
+				<li class="active" id="address-name">Tên sản phẩm</li>
 			</ol>
 			<!-- // Địa chỉ trang -->
 
@@ -250,19 +250,18 @@
 						})
 					</script>
 
-					<label class="lable-phi-ship">Miễn phí ship trên toàn quốc</label>
+					<label class="lable-phi-ship">Miễn phí ship nội thành TP.HCM và Hà Nội</label>
 					</p>
 					<div class="card">
 						<div class="card-header">
-							<h2 class="text-left"><strong>KHUYẾN MÃI TRỊ GIÁ 2.000.000₫</strong></h2>
-							<p>Giá và khuyến mãi dự kiến áp dụng đến 31/10</p>
+							<h2 class="text-left"><strong>KHUYẾN MÃI LÊN ĐẾN 15%</strong></h2>
+							<p>Giá và khuyến mãi dự kiến áp dụng đến 1/7</p>
 						</div>
 						<div class="card-body py-1">
 							<ul class="khuyen-mai mb-0 list-unstyled">
-								<li><i class="fa fa-check-circle" aria-hidden="true"></i>Giảm giá 2,000,000đ</li>
-								<li><i class="fa fa-check-circle" aria-hidden="true"></i>Giảm giá 2,000,000đ khi tham gia thu cũ
-									đổi mới <a href="#">Xem chi tiết</a></li>
-								<li><i class="fa fa-check-circle" aria-hidden="true"></i>Pin sạc dự phòng giảm 30% khi mua kèm
+								<li><i class="fa fa-check-circle" aria-hidden="true"></i>Giảm giá 15% cho tất cả sản phẩm</li>
+								<li><i class="fa fa-check-circle" aria-hidden="true"></i>Phí ship ưu đãi khi vận chuyển liên tỉnh</li>
+								<li><i class="fa fa-check-circle" aria-hidden="true"></i>Miễn phí ship nội thành TP.HCM và Hà Nội
 								</li>
 							</ul>
 						</div>
