--- a/chitietsanpham.html
+++ b/chitietsanpham.html
@@ -52,25 +52,10 @@
 								<input type="radio" name="" id="r2">
 								<input type="radio" name="" id="r3">
 
-								<div class="s1"><img src="Resources/myImages/si1.jpg" class="img-s-1" alt=""></div>
-								<div><img src="Resources/myImages/si2.jpg" class="img-s-2" alt=""></div>
-								<div><img src="Resources/myImages/si3.jpg" class="img-s-3" alt=""></div>
+								<div class="s1"><img src="" class="img-s-1" alt=""></div>
 							</div>
 						</div>
-						<div class="row w-100 mt-1 ml-0">
-							<label class="col-4 px-0 wrap-img label-img" for="r1">
-								<a href="javascript:void(0)"><img src="Resources/myImages/si1.jpg"
-										data-src="Resources/myImages/si1.jpg" class="image-show-sm img-s-1" alt="ASDASD"></a>
-							</label>
-							<label class="col-4 px-0 wrap-img text-center label-img" for="r2">
-								<a href="javascript:void(0)"><img src="Resources/myImages/si2.jpg"
-										data-src="Resources/myImages/si2.jpg" class="image-show-sm img-s-2" alt="ASDASD"> </a>
-							</label>
-							<label class="col-4 px-0 wrap-img text-right label-img" for="r3">
-								<a href="javascript:void(0)"><img src="Resources/myImages/si3.jpg"
-										data-src="Resources/myImages/si3.jpg" class="image-show-sm img-s-3" alt=""> </a>
-							</label>
-						</div>
+
 					</div>
 
 					<!-- Tao slide hinh anh -->
@@ -135,7 +120,7 @@
 						}
 
 						.s1 {
-							animation: slide-change 9s infinite;
+							/* animation: slide-change 9s infinite; */
 						}
 
 						@keyframes slide-change {
@@ -260,17 +245,18 @@
 						<div class="card-body py-1">
 							<ul class="khuyen-mai mb-0 list-unstyled">
 								<li><i class="fa fa-check-circle" aria-hidden="true"></i>Giảm giá 15% cho tất cả sản phẩm</li>
-								<li><i class="fa fa-check-circle" aria-hidden="true"></i>Phí ship ưu đãi khi vận chuyển liên tỉnh</li>
-								<li><i class="fa fa-check-circle" aria-hidden="true"></i>Miễn phí ship nội thành TP.HCM và Hà Nội
+								<li><i class="fa fa-check-circle" aria-hidden="true"></i>Phí ship ưu đãi khi vận chuyển liên
+									tỉnh</li>
+								<li><i class="fa fa-check-circle" aria-hidden="true"></i>Miễn phí ship nội thành TP.HCM và Hà
+									Nội
 								</li>
 							</ul>
 						</div>
 						<hr style="margin: 5px 0px;">
 						<div class="card-body py-1">
 							<ul class="khuyen-mai mb-0 list-unstyled">
-								<li><i class="fa fa-gift" aria-hidden="true"></i><span class="text-danger">Tặng 500.000₫</span>
-									mua hàng tại website thành viên, áp dụng khi mua Online tại Tp.HCM, Tp. Nha Trang, Tp. Phan
-									Thiết và 1 số khu vực khác <a href="#">click xem chi tiết</a></li>
+								<li><i class="fa fa-gift" aria-hidden="true"></i><span class="text-danger">Tặng 100.000₫</span>
+									mua hàng tại website thành viên, áp dụng khi mua Online tại Tp.HCM, Hà Nội và 1 số khu vực khác <a href="#">click xem chi tiết</a></li>
 							</ul>
 						</div>
 					</div>
