--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<!-- //Header -->
 
 
-	<!-- sản -->
+	<!-- sản phẩm mới nhất -->
 	<div class="sp-dien-thoai">
 		<div class="container">
 			<p class="title-dien-thoai">
@@ -66,17 +66,17 @@
 	<!-- Sản phẩm s -->
 	<div class="new-sp">
 		<div class="new-sp-text">
-			<p class="ten">vivo <span>V20</span></p>
-			<p class="cap1">Selfie Lấy Nét Tự Động Theo Mắt 44MP</p>
-			<p class="cap2">Kính Mờ Siêu Mỏng | Chụp Đêm 64MP</p>
+			<p class="ten">Bí Quyết <span>Thời Trang</span></p>
+			<p class="cap1">Váy đầm công sở thương hiệu GUMAC</p>
+			<p class="cap2">Chất lụa tơ tằm | Thoáng mát</p>
 			<div class="d-flex justify-content-center align-items-center">
 				<button>
 					ĐẶT TRƯỚC <br>
-					<span>Cọc 500.000<sup>đ</sup> </span>
+					<span>Cọc 200.000<sup>đ</sup> </span>
 				</button>
 				<button>
 					TRẢ GÓP <br>
-					<span>Cọc 500.000<sup>đ</sup> </span>
+					<span>Cọc 200.000<sup>đ</sup> </span>
 				</button>
 			</div>
 		</div>
