--- a/lienhe.html
+++ b/lienhe.html
@@ -40,8 +40,8 @@
 					<p class="lead" style="margin-bottom: 20px;">Chúng tôi sẵn sàng dẫn dắt bạn trong tương lai</p>
 					<p class="phone-number"><span>Số điện thoại: </span><a href="tel:(028) 372 51993">(028) 372 51993</a></p>
 					<p class="email"><span>Email: </span><a
-							href="mailto:phongdaotaodh@uit.edu.vn">phongdaotaodh@uit.edu.vn</a></p>
-					<p class="lead" style="margin-bottom: 50px;">Khu phố 6, Phường Linh Trung, Quận Thủ Đức, TP.Hồ Chí Minh.
+							href="mailto:phongdaotaodh@uit.edu.vn">alf.huyhoang@gmail.com</a></p>
+					<p class="lead" style="margin-bottom: 50px;">25/3D đường số 2, TP. Thủ Đức, TP. Hồ Chí Minh.
 					</p>
 
 
