--- a/thongtinkhachang.html
+++ b/thongtinkhachang.html
@@ -121,7 +121,8 @@
                         <div class="my-group pb-3">
                             <div class="col-lg-3"></div>
                             <div class="col-lg-9">
-                                <button class="btn btn-primary px-3 mt-3" style="font-size: 16px;" id="btn-update-info">CẬP NHẬT</button>
+                                <button class="btn btn-primary px-3 mt-3" style="font-size: 16px;"
+                                    id="btn-update-info">CẬP NHẬT</button>
                             </div>
                         </div>
 
@@ -291,7 +292,7 @@
                     </div>
                 </div>
                 <div id="s3" class="p-5 ">
-                    <h1 class="title">Đơn hàng của tôi <span class="my-so-luong">(12)</span></h1>
+                    <h1 class="title">Đơn hàng của tôi <span class="my-so-luong"></span></h1>
                     <div class="section-content">
 
                         <table class="don-hangs" id="table-order">
